welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:32: error: Boolean does not take parameters
else (litMessage == "X") {
                         ^